Updated parallel tasks from explicit threads to lambdas